--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
-name=WiFiManager
+name=SolaAlarm Hub
 version=2.0.16-rc.2
-author=tzapu
+author=Inventon (Pty) Ltd
 maintainer=tablatronix
-sentence=WiFi Configuration manager with web configuration portal for Espressif ESPx boards, by tzapu
-paragraph=Library for configuring ESP8266/ESP32 modules WiFi credentials and custom parameters at runtime with captive portal.
+sentence=WiFi Configuration manager with web configuration portal for SolarAlarm Hub
+paragraph=Library for configuring SolarAlarm Hub with captive portal.
 category=Communication
-url=https://github.com/tzapu/WiFiManager.git
+url=https://github.com/tausolutionsza/WiFiManager.git
 architectures=esp8266,esp32
