--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
-name=SolaAlarm Hub
+name=Inventon SolaAlarm Hub
 version=2.0.16-rc.2
 author=Inventon (Pty) Ltd
 maintainer=tablatronix
-sentence=WiFi Configuration manager with web configuration portal for SolarAlarm Hub
-paragraph=Library for configuring SolarAlarm Hub with captive portal.
+sentence=WiFi Configuration manager with web configuration portal for Inventon SolarAlarm Hub
+paragraph=Library for configuring Inventon SolarAlarm Hub with captive portal.
 category=Communication
 url=https://github.com/tausolutionsza/WiFiManager.git
 architectures=esp8266,esp32
